fixed bug involving vertical scrollbars showing up unexpected in ie7

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
 	font-size: 13px;
 	font-family: Tahoma;
-	overflow-y: scroll;
+	overflow: auto;
 	color: #555;
 }
 
